--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,100 +1,126 @@
+/* Graphy for old posts */
+
+img {
+	height: auto; /* Make sure images are scaled correctly. */
+	max-width: 100%; /* Adhere to container width. */
+	vertical-align: middle;
+}
+
+/* Alignment */
+.aligncenter,
+.alignleft,
+.alignright {
+  margin-bottom: 24px;
+}
+.aligncenter {
+  clear: both;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+.alignleft {
+  display: inline;
+  float: left;
+  margin-right: 24px;
+}
+.alignright {
+  display: inline;
+  float: right;
+  margin-left: 24px;
+}
+@media screen and (min-width: 1180px) {
+  .no-sidebar .alignleft {
+    margin-left: -100px;
+  }
+  .no-sidebar .alignright {
+    margin-right: -100px;
+  }
+}
+
+/* ======================================================== */
+
+/* Space out content a bit */
 body {
-    background: #ffffff;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-#grid {
-    position: relative;
-    width: 60%;
-    margin: 0 auto;
-    padding: 0; /* Clears unordered list default of 40px */
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.marketing,
+.footer {
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
-.clear:after {
-    content: "";
-    display: block;
-    clear: both;
+/* Custom page header */
+.header {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 40px;
 }
 
-#grid li {
-    list-style-type: none;
-    position: relative;
-    float: left;
-    width: 27.85714285714286%;
-    padding: 0 0 32.16760145166612% 0;
-    -o-transform: rotate(-60deg) skewY(30deg);
-    -moz-transform: rotate(-60deg) skewY(30deg);
-    -webkit-transform: rotate(-60deg) skewY(30deg);
-    -ms-transform: rotate(-60deg) skewY(30deg);
-    transform: rotate(-60deg) skewY(30deg);
-    background: fd005f;
-    overflow: hidden;
-    visibility: hidden;
+/* Custom page footer */
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
 }
 
-#grid li * {
-    visibility: visible;
+/* Customize container */
+@media (min-width: 768px) {
+  .container {
+    max-width: 800px;
+  }
+}
+.container-narrow > hr {
+  margin: 30px 0;
 }
 
-#grid li .hexagon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -o-transform: skewY(-30deg) rotate(60deg);
-    -moz-transform: skewY(-30deg) rotate(60deg);
-    -webkit-transform: skewY(-30deg) rotate(60deg);
-    -ms-transform: skewY(-30deg) rotate(60deg);
-    transform: skewY(-30deg) rotate(60deg);
-    overflow: hidden;
+/* Main marketing message and sign up button */
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
 }
 
-#grid li:nth-child(3n+2) {
-    margin: 0 1%;
+/* Supporting marketing content */
+.marketing {
+  margin: 40px 0;
+}
+.marketing p + h4 {
+  margin-top: 28px;
 }
 
-#grid li:nth-child(6n+4), #grid li:nth-child(6n+5), #grid li:nth-child(6n+6) {
-    margin-top: -6.9285714285%;
-    margin-bottom: -6.9285714285%;
-    -o-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    -moz-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg);
-    transform: translateX(50%) rotate(-60deg) skewY(30deg);
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  /* Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 30px;
+  }
+  /* Remove the bottom border on the jumbotron for visual effect */
+  .jumbotron {
+    border-bottom: 0;
+  }
 }
 
-.content {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -o-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
-#grid li:nth-child(6n+4) { 
-    margin-left: 0.5%;
-}
-
-#grid li:nth-child(5n) .hexagon { 
-    background: #BAC7BE;
-}
-
-#grid li:nth-child(5n+1) .hexagon { 
-    background: #C2E1C2;
-}
-
-#grid li:nth-child(5n+2) .hexagon { 
-    background: #7DCD85;
-}
-
-#grid li:nth-child(5n+3) .hexagon { 
-    background: #80AB82;
-}
-
-#grid li:nth-child(5n+4) .hexagon { 
-    background: #778472;
+.site-logo {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
 }
