Remove GitHub and Twitter links and change name.

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>telliott.io</title>
+        <title>Tom Elliott</title>
         <meta name="description" content="Tom Elliott - Projects">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link
@@ -26,20 +26,14 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h1 class="text-muted">telliott.io</h1>
+                        <h1 class="text-muted">Tom Elliott</h1>
                         <p>Software Engineer by day, hobbyist software engineer the rest of the time.</p>
+                        <p>Here are a few of the things I've made.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="header clearfix">
-                    <nav>
-                      <ul class="nav nav-pills pull-right">
-                        <li role="presentation"><a href="https://github.com/theothertomelliott">GitHub</a></li>
-                        <li role="presentation"><a href="https://twitter.com/theotherelliott">Twitter</a></li>
-                      </ul>
-                    </nav>
-            </div>
+            <div class="clearfix">&nbsp;</div>
 
             <!-- based on https://www.codesmite.com/article/how-to-create-pure-css-hexagonal-grids -->
             <ul id="grid" id="project-grid" class="clear">
