Add the environment name to front page headers

--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta environment="{{ .Env }}">
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Tom Elliott</title>
