--- a/views/index.html
+++ b/views/index.html
@@ -61,5 +61,17 @@
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="crossorigin="anonymous"></script>
         <script async=""
             src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript" src="https://makerbadge.s3.amazonaws.com/blmbadge.js"></script>
+        <script>
+        BLMBadge.init({
+            layout:1, 
+            theme:'dark', 
+            promoText : 'Send a donation '+String.fromCodePoint(0x2192),
+            promoLink : 'https://minnesotafreedomfund.org/',
+            message : 'To be silent is to be complicit. Black lives matter.',
+            title : '#BlackLivesMatter'
+        })
+        </script>
     </body>
 </html>
