Clean up image loading
Use snapshot of external projects as test data.

--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
                     <a href="{{ .URL }}">
                         <div class="hexagon">
                             {{ if .Image }}
-                                <img src="/image/{{ .Name }}"/>
+                                <img src="/image/{{ .Slug }}"/>
                             {{ end }}
                             <div class="content">
                                 <h3 class="name">{{ .Name }}</h3>
